<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <Button
        android:id="@+id/button_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="250dp"
        android:layout_marginTop="600dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="181dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_register"
        android:textColor="@color/dot_dark_screen1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_link_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="650dp"
        android:layout_marginEnd="94dp"
        android:layout_marginBottom="129dp"
        android:background="@null"
        android:text="@string/compteexistant"
        android:textAllCaps="false"
        android:textColor="@color/dot_dark_screen1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_prenom"
        android:layout_width="280dp"
        android:layout_height="38dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="346dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="347dp"
        android:background="@color/dot_dark_screen1"
        android:hint="Prénom"
        android:inputType="textCapWords"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></EditText>

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="280dp"
        android:layout_height="38dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="446dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="347dp"
        android:background="@color/dot_dark_screen1"
        android:hint="Email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></EditText>


    <EditText
        android:id="@+id/editText_nom"
        android:layout_width="280dp"
        android:layout_height="38dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="298dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="395dp"
        android:background="@color/dot_dark_screen1"
        android:hint="Nom"
        android:inputType="textCapWords"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </EditText>

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="280dp"
        android:layout_height="38dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="546dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="347dp"
        android:background="@color/dot_dark_screen1"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></EditText>

    <EditText
        android:id="@+id/editText_password2"
        android:layout_width="280dp"
        android:layout_height="38dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="650dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="347dp"
        android:background="@color/dot_dark_screen1"
        android:hint="Confirmez mot de passe"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></EditText>

    <TextView
        android:id="@+id/textViewBienvenue"
        android:layout_width="274dp"
        android:layout_height="94dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="588dp"
        android:gravity="center"
        android:text="@string/bienvenue"
        android:textColor="@color/dot_dark_screen1"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="159dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="545dp"
        android:text="@string/indication"
        android:textColor="@color/dot_dark_screen1"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="173dp"
        android:layout_marginTop="253dp"
        android:layout_marginEnd="195dp"
        android:layout_marginBottom="454dp"
        android:text="@string/signup"
        android:textColor="@color/dot_dark_screen1"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>